[workspace]
members = [
    "core",
    "capture",
    "probe",
    "detect",
    "tui",
]
resolver="3"

[workspace.dependencies]
libc = "0.2.180"
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
pcap = "2.4.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
